--- a/miniprogram/pages/cart/cart.wxml
+++ b/miniprogram/pages/cart/cart.wxml
@@ -1,2 +1,59 @@
-<!--pages/cart/cart.wxml-->
-<text>pages/cart/cart.wxml</text>
+
+<!-- 购物车内容-->
+<view class="cart_content">
+  <view class="cart_title">购物车</view>
+  <view class="cart_main">
+    <!--商品为0显示提示-->
+    <block wx:if="{{goodData.length!==0}}">
+    <view class="cart_item" wx:for="{{goodData}}">
+      <!-- 复选框-->
+      <view class="cart_chk_wrap">
+        <checkbox-group data-id="{{item.GoodsNo}}" bindchange="handleItemChange">
+          <checkbox checked="{{item.checked}}"></checkbox>
+        </checkbox-group>
+      </view>
+      <!-- 商品图片-->
+      <navigator class="cart_img_wrap"  data-goodid="{{item.GoodsNo}}" bindtap="jumptogood">
+        <image style="width:90%" mode='widthFix'  src="{{item.GoodsImage}}">
+        </image>
+      </navigator> 
+      <!-- 商品信息-->
+      <view class="cart_info_wrap">
+        <view class="goods_name" data-goodid="{{item.GoodsNo}}" bindtap="jumptogood">{{item.Title}}</view>
+        <view class="goods_price_warp">
+          <view class="goods_price">￥{{item.price}}</view>
+          <view class="cart_num_tool">
+            <view class="number_edit" data-id="{{item.GoodsNo}}" data-operation="{{-1}}" bindtap="handleItemNumEdit">-</view>
+            <view class="good_num">{{item.SaleAmount}}</view>
+            <view class="number_edit" data-id="{{item.GoodsNo}}" data-operation="{{1}}" bindtap="handleItemNumEdit">+</view>
+          </view>
+        </view>
+      </view>
+    </view>
+    </block>
+    <block wx:else>购物车中还没有商品
+      <image mode="widthFix" src="https://photo.babylyf.com/user_files/2904/publish/post/85354389_1573391788.jpeg"></image>
+    </block>
+  </view>
+</view>
+
+<!--底部工具栏-->
+<view class="footer_tool">
+  <!--全选-->
+  <view class="all_chk_wrap">
+    <checkbox-group bindchange="handleItemAllcheck">
+      <checkbox checked="{{allChecked}}">全选</checkbox>
+    </checkbox-group>
+  </view>
+  <!--总价格-->
+  <view class="total_price_wrap">
+    <view class="total_price">
+      合计：<text class="total_price_text">￥{{totalprice}}</text>
+    </view>
+    <view>包含运费</view>
+  </view>
+  <!--结算-->
+  <view class="order_pay_wrap" bindtap="handlePay">
+    结算（{{totalnumber}}）
+  </view>
+</view>
