增加了一个订单界面

--- a/miniprogram/pages/mine/mine.wxml
+++ b/miniprogram/pages/mine/mine.wxml
@@ -51,7 +51,7 @@
 <!-- 待支付开始 -->
 <view class="middle-view">
   <view class="item">
-    <view class="iconfont icondaifukuan"></view>
+    <view class="iconfont icondaifukuan" bindtap="handle_waiting_pay"></view>
     <view >待付款</view>
   </view>
     <view class="item">
