--- a/miniprogram/pages/mine/mine.wxml
+++ b/miniprogram/pages/mine/mine.wxml
@@ -21,7 +21,7 @@
       </view>
     <!-- 用户名称结束 -->
     <!-- 个人主页开始 -->
-     <view class="site">查看个人主页</view>
+     <view class="site">查看个人信息</view>
      <!-- 个人主页结束 -->
     </view>
      <!-- 收藏开始 -->
