--- a/miniprogram/pages/good-detail/good-detail.wxml
+++ b/miniprogram/pages/good-detail/good-detail.wxml
@@ -29,6 +29,24 @@
   </view>
   <!--商家地址-->
 
+  <block class="choose-line">
+  <view class="commodity_attr_list">
+  <!--每组属性-->
+  <view class="attr_box" wx:for="{{attrValueList}}" wx:for-item="attrValueObj" wx:for-index="attrIndex">
+    <!--属性名-->
+    <view class="attr_name">{{attrValueObj.attrKey}}</view>
+    <!--属性值-->
+    <view class="attr_value_box">
+      <!--每个属性值-->
+      <view class="attr_value {{attrIndex==firstIndex || attrValueObj.attrValueStatus[valueIndex]?(value==attrValueObj.selectedValue?'attr_value_active':''):'attr_value_disabled'}}" bindtap="selectAttrValue" data-status="{{attrValueObj.attrValueStatus[valueIndex]}}"
+        data-value="{{value}}" data-key="{{attrValueObj.attrKey}}" data-index="{{attrIndex}}" data-selectedvalue="{{attrValueObj.selectedValue}}" wx:for="{{attrValueObj.attrValues}}" wx:for-item="value" wx:for-index="valueIndex">{{value}}</view>
+    </view>
+  </view>
+  </view>
+  </block>
+  <!--联动选择-->
+
+
   <view class="detail-box">
   <block wx:for="{{detailInfo.DetailImgList}}" wx:key="*this">
    <image mode="widthFix" src="{{item}}"></image>
