--- a/miniprogram/pages/good-detail/good-detail.wxss
+++ b/miniprogram/pages/good-detail/good-detail.wxss
@@ -1,90 +1,141 @@
 /* pages/good-detail/good-detail.wxss */
 
-.swiper-box{
+.swiper-box {
   position: relative;
 }
 
-.swiper-box swiper{
+.swiper-box swiper {
   height: 650rpx;
-
 }
 
-.swiper-box swiper image{
+.swiper-box swiper image {
   width: 100%;
   height: 100%;
 }
 
-.swiper-box .tips{
-position: absolute;
-right: 20rpx;
-bottom: 20rpx;
-background: #333;
-opacity: 0.6;
-padding: 20rpx;
-border-radius:20rpx;
+.swiper-box .tips {
+  position: absolute;
+  right: 20rpx;
+  bottom: 20rpx;
+  background: #333;
+  opacity: 0.6;
+  padding: 20rpx;
+  border-radius: 20rpx;
 }
 
-.swiper-box .tips text{
-  color:ghostwhite;
+.swiper-box .tips text {
+  color: ghostwhite;
 }
 
-.good-info{
-  padding:30rpx;
+.good-info {
+  padding: 30rpx;
 }
 
-.good-info .price{
+.good-info .price {
   color: red;
 }
 
-.good-info .choose{
+.good-info .choose {
   display: flex;
 }
 
-.good-info .choose .title{
+.good-info .choose .title {
   margin-top: 10rpx;
 }
 
-.address{
+.address {
   display: flex;
   height: 100rpx;
   line-height: 100rpx;
-  background:gray;
+  background: gray;
   font-size: 32rpx;
-  padding:0 20rpx;
+  padding: 0 20rpx;
 }
 
-.detail-box{
+.detail-box {
   padding: 25rpx 25rpx 140rpx;
-
 }
 
-.detail-box image{
-  width:100%;
+.detail-box image {
+  width: 100%;
   display: block;
 }
 
 /*以左0底0为基准固定*/
-.bottom-nav{
+
+.bottom-nav {
   height: 130rpx;
   width: 100%;
   display: flex;
   position: fixed;
-  left:0;
+  left: 0;
   bottom: 0;
   background: white;
 }
 
-.bottom-nav .daohan{
-flex:0.5;
-text-align: center;
-font-size: 28rpx;
+.bottom-nav .daohan {
+  flex: 0.5;
+  text-align: center;
+  font-size: 28rpx;
 }
 
-.bottom-nav .addcard{
-  flex:1;
+.bottom-nav .addcard {
+  flex: 1;
   text-align: center;
   line-height: 130rpx;
   font-size: 36rpx;
-  background:orange;
+  background: orange;
   color: white;
 }
+
+.choose-line .title {
+  padding: 10rpx 20rpx;
+  margin: 10rpx 0;
+  border-left: 4rpx solid #ccc;
+}
+
+/*全部属性的主盒子*/
+.commodity_attr_list { 
+ background: #fff; 
+ padding: 0 20rpx; 
+ font-size: 32rpx; 
+ overflow: hidden; 
+ width: 100%; 
+} 
+/*每组属性的主盒子*/
+.attr_box { 
+ width: 100%; 
+ overflow: hidden; 
+ border-bottom: 1rpx solid #ececec; 
+} 
+/*属性名*/
+.attr_name { 
+ width: 20%; 
+ float: left; 
+ padding: 15rpx 0; 
+} 
+/*属性值*/
+.attr_value_box { 
+ width: 80%; 
+ float: left; 
+ padding: 15rpx 0; 
+ overflow: hidden; 
+} 
+/*每个属性值*/
+.attr_value { 
+ float: left; 
+ padding: 0 10rpx; 
+ margin: 0 10rpx; 
+ border: 1rpx solid #ececec; 
+} 
+/*每个属性选中的当前样式*/
+.attr_value_active { 
+ background: #c81623; 
+ border-radius: 10rpx; 
+ color: #fff; 
+ padding: 0 10rpx; 
+} 
+/*禁用属性*/
+.attr_value_disabled { 
+ color: #ccc; 
+} 
