--- a/miniprogram/pages/login/login.wxml
+++ b/miniprogram/pages/login/login.wxml
@@ -7,15 +7,15 @@
 <view class="form">
   <view class="row-group">
     <text>账号</text>
-    <input placeholder="请填写手机账号" placeholder-class='txt' maxlength='11' value="{{account}}" bindinput="AccountInput" />
+    <input placeholder="请填写邮箱" placeholder-class='txt' maxlength='20' value="{{account}}" bindinput="AccountInput" />
   </view>
 
    <view class="row-group">
     <text>密码</text>
-    <input placeholder="请填写密码" placeholder-class='txt' maxlength='11' value="{{password}}" bindinput="PasswordInput" />
+    <input placeholder="请填写密码" placeholder-class='txt' maxlength='20' value="{{password}}" bindinput="PasswordInput" />
     <view class="code" bindtap="onClickCheckCode">忘记密码</view>
   </view>
-
+  
   <view>
     <button class="submit"  open-type="getUserInfo" bindtap="onClickSubmit">登录</button>
   </view>
