--- a/miniprogram/pages/cart/cart.wxss
+++ b/miniprogram/pages/cart/cart.wxss
@@ -77,7 +77,13 @@
   -webkit-line-clamp: 2;
   color:#876;
 }
-
+.cart_content .cart_main .cart_item .cart_info_wrap .goods_sku{
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  color:#876;
+}
 .cart_content .cart_main .cart_item .cart_info_wrap .goods_price_warp{
   display: flex;
   justify-content: space-between;
