--- a/miniprogram/pages/test/test.wxml
+++ b/miniprogram/pages/test/test.wxml
@@ -2,13 +2,13 @@
 
 <view class="form">
   <view class="row-group">
-    <text>账号</text>
-    <input placeholder="请填写商家账号" placeholder-class='txt' maxlength='11' value="{{account}}" bindinput="AccountInput" />
+    <text>{{attrValueList[0].attrKey}}</text>
+    <input placeholder="请填写商家账号" placeholder-class='number' maxlength='11' value="{{account}}" bindinput="AccountInput" />
   </view>
 
   <view class="row-group">
-    <text>密码</text>
-    <input placeholder="请填写密码" placeholder-class='txt' maxlength='11' value="{{password}}" bindinput="PasswordInput" />
+    <text>{{attrValueList[1].attrKey}}</text>
+    <input placeholder="请填写密码" placeholder-class='number' maxlength='11' value="{{password}}" bindinput="PasswordInput" />
   </view>
 </view>
 
