--- a/miniprogram/pages/base/base.wxml
+++ b/miniprogram/pages/base/base.wxml
@@ -21,14 +21,14 @@
 </view>
 
 <view class="good-list">
-  <view class="item" wx:for="{{goodData}}" wx:key="*this" data-goodid="{{item.GoodsNo}}" bindtap="jumptogood">
+  <view class="item" wx:for="{{goodData}}" wx:key="*this" data-goodid="{{item.goodid}}" bindtap="jumptogood">
     <view class="pic">
-      <image src="{{item.GoodsImage}}"></image>
+      <image src="{{item.goodpicture}}"></image>
     </view>
     <view class="content">
-      <view class="title">{{item.Title}}</view>
-      <view class="desc">{{item.Brand}}</view>
-      <view class="price">${{item.SaleAmount}}</view>
+      <view class="title">{{item.goodname}}</view>
+      <view class="desc">{{item.categoryid}}</view>
+      <view class="price">{{item.shopid}}</view>
     </view>
   </view>
 </view>
