--- a/miniprogram/pages/degood/degood.wxml
+++ b/miniprogram/pages/degood/degood.wxml
@@ -1,10 +1,10 @@
 <!--miniprogram/pages/goodmanagement/goodmanagement.wxml-->
 <!--miniprogram/pages/order/order.wxml-->
 <view class="order_main">
-  <view wx:for="{{up_goods}}" wx:key="goodID" class="order_item">
+  <view wx:for="{{up_goods}}" wx:key="goodid" class="order_item">
     <view class="order_no_row">
       <view class="order_no_text">商品编号</view>
-      <view class="order_no_value">{{item.goodID}}</view>
+      <view class="order_no_value">{{item.goodid}}</view>
     </view>
     <view class="order_name_row">
     <view class="order_name_text">商品名</view>
@@ -12,11 +12,10 @@
     </view>
     <view class="order_desc_row">
     <view class="order_desc_text">商品描述</view>
-      <view class="order_desc_value">{{item.describe}}</view>
+      <view class="order_desc_value">{{item.introduction}}</view>
     </view>
     <view>
-      <button style="width:80%" class="ybtn">取消下架</button>
-      <button style="width:80%" class="nbtn">确认下架</button>
+      <button style="width:80%" class="nbtn" data-id="{{item.goodid}}" bindtap="degood">确认下架</button>
     </view>
   </view>
 </view>
