--- a/miniprogram/pages/mine/mine.wxml
+++ b/miniprogram/pages/mine/mine.wxml
@@ -21,7 +21,7 @@
       </view>
     <!-- 用户名称结束 -->
     <!-- 个人主页开始 -->
-     <view class="site">查看个人信息</view>
+     <view class="site">{{state}}</view>
      <!-- 个人主页结束 -->
     </view>
      <!-- 收藏开始 -->
@@ -72,16 +72,16 @@
 <!-- 钱包 优惠券 开始 -->
 <view class="function-view">
   <view class="item">
-    <view class="left">我的钱包</view> 
+    <view class="left">用户名字</view> 
       <view class="right">
-        <text>¥20</text>
+        <text>{{name}}</text>
         <image class="go-icon" src='/images/pig.jpg'></image>
       </view>
   </view>
-  <view class="item">
-      <view class="left">我的优惠券</view>
+  <view class="item" bindtap="changemine">
+      <view class="left">修改个人信息</view>
       <view class="right">
-        <text>暂无课用</text>
+        <text>{{name}}</text>
         <image class="go-icon" src='/images/pig.jpg'></image>
       </view>
     </view>
