--- a/miniprogram/pages/good-change/good-change.wxss
+++ b/miniprogram/pages/good-change/good-change.wxss
@@ -1,47 +1,88 @@
 /* pages/good-change/good-change.wxss */
-.form{
-  padding: 40rpx;
-}
-.form .row-group{
-  padding: 20rpx 0;
-  position: relative;
-  border-bottom: 1rpx solid #ddd;
-}
-
-.form .row-group text{
-  font-size: 28rpx;
-  padding:10rpx 0;
-}
-
-.form .row-group input{
-  padding: 10rpx 0;
-}
-
-.form .row-group .txt{
-  color: #ccc;
-}
-
-.form .row-group .code{
-  position: absolute;
-  right: 0;
-  bottom: 26rpx;
-  z-index: 2;
-
-  width: 206rpx;
-  height: 60rpx;
-  border: 2rpx solid #00c8b6;
-  border-radius: 12rpx;
-  font-size: 26rpx;
-  font-weight: 400;
-  color: #00c8b6;
+.good-list .item {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  padding: 30rpx 20rpx;
+  border-bottom: solid 2rpx #999;
 }
 
-.form .submit{
-  margin-top: 80rpx;
+.good-list .item .pic {
+  width: 200rpx;
+  height: 200rpx;
+}
+
+.good-list .item .pic image {
+  width: 200rpx;
+  height: 200rpx;
+}
+
+.good-list .item .content {
+  margin-left: 20rpx;
+}
+
+.good-list .item .content .text {
+  display: flex;
+}
+
+.good-list .item .content .text .title {
+  font-size: 36rpx;
+}
+
+.good-list .item .content .text .type {
+  font-size: 32rpx;
+  padding: 0 12rpx;
+}
+
+.good-list .item .content .desc {
+  font-size: 36rpx;
+  color: #999;
+  margin-top: 20rpx;
+}
+
+.good-list .item .content .sellandstock {
+  display: flex;
+}
+
+.good-list .item .content .sell {
+  margin-top: 20rpx;
+  font-size: 32rpx;
+  padding:0 10rpx;
+}
+
+.good-list .item .content .stock {
+  margin-top: 20rpx;
+  font-size: 32rpx;
+  padding:0 10rpx;
+}
+
+.good-list .item .content .button{
+  display: flex;
+}
+
+.good-list .item .content .price {
+  color: red;
+  margin-top: 30rpx;
+  font-size: 36rpx;
+}
+
+.good-list .item .content .stock {
+  margin-top: 30rpx;
+  font-size: 36rpx;
+}
+
+.good-list .item .content .allsell {
+  margin-top: 30rpx;
+  font-size: 36rpx;
+}
+
+.anniu{
+  display: flex;
+}
+
+.anniu .submit{
+  margin-top:10rpx; 
   color: #fff;
+  border: 2rpx solid #00c8b6;
+  background-color: blue;
   font-size: 32rpx;
   font-weight: bold;
 }
