--- a/miniprogram/pages/order/order.wxml
+++ b/miniprogram/pages/order/order.wxml
@@ -5,6 +5,10 @@
       <view class="order_no_text">订单编号</view>
       <view class="order_no_value">{{item.orderid}}</view>
     </view>
+    <view class="order_no_row">
+      <view class="order_no_text">订单属性</view>
+      <view class="order_no_value">{{item.attribute}}</view>
+    </view>
     <view class="order_price_row">
       <view class="order_price_text">订单价格</view>
       <view class="order_price_value">￥{{item.money}}</view>
