--- a/miniprogram/pages/seller/seller.wxml
+++ b/miniprogram/pages/seller/seller.wxml
@@ -1,19 +1,19 @@
 <!--pages/seller/seller.wxml-->
+<view>
+      <button style="width:80%" class="ybtn" bindtap="getorders">获取所有订单信息</button>
+</view>
 <view class="good-list">
-  <view class="item" wx:for="{{goodData}}" wx:key="*this" data-goodid="{{item.GoodsNo}}" bindtap="jumptogood">
+  <view class="item" wx:for="{{goodData}}" wx:key="*this" data-goodid="{{item.goodid}}" data-goodname="{{item.goodname}}"bindtap="jumptogood">
     <view class="pic">
-      <image src="{{item.GoodsImage}}"></image>
+      <image src="{{item.goodpicture}}"></image>
     </view>
     <view class="content">
       <view class="text">
-        <view class="title">{{item.Title}}</view>
-        <view class="type" wx:for="{{item.attrValueList}}" wx:key="*this">{{item.attrValue}}</view>
+        <view class="title">{{item.goodname}}</view>
       </view>
-      <view class="desc">{{item.GoodsNo}}</view>
+      <view class="desc">{{item.goodid}}</view>
       <view class="sellandstock">
-        <view class="price">${{item.SaleAmount}}</view>
-        <view class="stock">库存：{{item.Stock}}</view>
-        <view class="sell">销量：{{item.SellNum}}</view>
+      <view class="allsell">总销量：{{item.allsellnumber}}</view>
       </view>
     </view>
   </view>
@@ -37,9 +37,14 @@
     <view>管理订单</view>
   </view>
 
-  <view class="daohan" bindtap="change">
-    <view class="iconfont icontiaozhengfeiyong"></view>
-    <view>调整商品</view>
+  <view class="daohan" bindtap="changeseller" data-sellerid="{{item.sellerid}}">
+    <view class="iconfont iconxiugaigerenxinxi"></view>
+    <view>修改信息</view>
+  </view>
+
+    <view class="daohan" bindtap="changesku">
+    <view class="iconfont icontubiaozhizuomoban"></view>
+    <view>增加商品</view>
   </view>
 
 </view>
