最终整合版本
实现了首页，商品详情页，规格选择，购物车，个人登陆和修改信息，个人订单管理，商家的商品管理，商家查看商品的销售记录，商家订单管理，管理员对商品的审核上下架，管理员对商家注册的审核

--- a/miniprogram/pages/addstock/addstock.wxml
+++ b/miniprogram/pages/addstock/addstock.wxml
@@ -1,13 +1,8 @@
 <!--pages/addstock/addstock.wxml-->
 <view class="form">
-  <view class="row-group">
-    <text>SKUID号</text>
-    <input placeholder="请填写要修改的SKU号" placeholder-class='txt' maxlength='15' value="{{account}}" bindinput="AccountInput" />
-  </view>
-
     <view class="row-group">
-    <text>进货量</text>
-    <input placeholder="请填写要进货的量" placeholder-class='txt' maxlength='15' value="{{add}}" bindinput="addInput" />
+    <text>总量</text>
+    <input placeholder="请填写总量" placeholder-class='txt' maxlength='15' value="{{add}}" bindinput="addInput" />
   </view>
   </view>
 
