--- a/miniprogram/pages/down/down.wxss
+++ b/miniprogram/pages/down/down.wxss
@@ -1,4 +1,4 @@
-/* pages/delete-good/delete-good.wxss */
+/* pages/down/down.wxss */
 .good-list .item {
   display: flex;
   padding: 30rpx 20rpx;
@@ -62,13 +62,4 @@
 .good-list .item .content .allsell{
   margin-top:30rpx;
   font-size:32rps; 
-}
-
-.anniu .submit{
-  margin-top:10rpx; 
-  color: #fff;
-  border: 2rpx solid #00c8b6;
-  background-color: blue;
-  font-size: 32rpx;
-  font-weight: bold;
 }
