--- a/miniprogram/pages/changesku/changesku.wxml
+++ b/miniprogram/pages/changesku/changesku.wxml
@@ -1,8 +1,9 @@
 <!--pages/changesku/changesku.wxml-->
 <view class="form">
+
   <view class="row-group">
-    <text>SKUID号</text>
-    <input placeholder="请填写要修改的SKU号" placeholder-class='txt' maxlength='15' value="{{account}}" bindinput="AccountInput" />
+    <text>图片</text>
+    <input placeholder="请填写图片" placeholder-class='txt' maxlength='255' value="{{picture}}" bindinput="pictureInput" />
   </view>
 
     <view class="row-group">
