--- a/miniprogram/pages/dingdan.wxml
+++ b/miniprogram/pages/dingdan.wxml
@@ -1,2 +1,37 @@
 <!--pages/dingdan.wxml-->
-<text>pages/dingdan.wxml</text>
+<view class='jd_index'>
+  <Searchinput></Searchinput>
+</view>
+
+<view class="navbar">
+  <text wx:for="{{navbar}}" data-idx="{{index}}" class="item {{currentTab==index ? 'active' : ''}}" wx:key="unique" bindtap="navbarTap">{{item}}</text>
+</view>
+
+<view class="page-box">
+  <!--幻灯片-->
+  <view class="swiper-box">
+    <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
+      <block wx:for="{{background}}" wx:key="*this">
+        <swiper-item>
+          <image src="{{item}}"></image>
+          <!--<view class="swiper-item {{item}}"></view>-->
+        </swiper-item>
+      </block>
+    </swiper>
+  </view>
+</view>
+
+<view class="good-list">
+  <view class="item" wx:for="{{goodData}}" wx:key="*this" data-goodid="{{item.goodid}}" bindtap="jumptogood">
+    <view class="pic">
+      <image src="{{item.goodpicture}}"></image>
+    </view>
+    <view class="content">
+      <view class="title">{{item.goodname}}</view>
+      <view class="desc">{{item.categoryid}}</view>
+      <view class="price">{{item.shopid}}</view>
+      <view class="price" wx:if="{{item.ispackage==1}}">包邮</view>
+      <view class="price" wx:else>不包邮</view>
+    </view>
+  </view>
+</view>
