--- a/miniprogram/pages/dingdan.wxss
+++ b/miniprogram/pages/dingdan.wxss
@@ -1,1 +1,82 @@
 /* pages/dingdan.wxss */
+@import "/wxSearch/wxSearch.wxss";
+
+.navbar{  
+  flex: none;  
+  display: flex;  
+  background: #fff;  
+}  
+.navbar .item{  
+  position: relative;  
+  flex: auto;  
+  text-align: center;  
+  line-height: 80rpx;  
+  font-size:14px;
+}  
+/* 顶部导航字体颜色 */
+.navbar .item.active{  
+   color: #e1007e;
+}  
+/* 顶部指示条属性 */
+.navbar .item.active:after{  
+  content: "";  
+  display: block;  
+  position: absolute;  
+  bottom: 0;  
+  left: 0;  
+  right: 0;  
+  height: 5rpx;  
+  background: #e1007e;  
+  width: 70%;
+  margin: 0px auto;
+}
+
+.swiper-box{
+padding: 30rpx;
+}
+
+.swiper-box swiper{
+  height: 300rpx;
+}
+
+.swiper-box swiper image{
+width: 100%;
+height: 100%;
+}
+/*元素加了浮动后要给父元素清除*/
+
+
+.good-list .item{
+  display: flex;
+  padding: 30rpx 20rpx;
+  border-bottom:solid 2rpx #999
+}
+
+.good-list .item .pic{
+  width: 200rpx;
+  height: 200rpx;
+}
+
+.good-list .item .pic image{
+  width: 200rpx;
+  height: 200rpx;
+}
+
+.good-list .item .content{
+margin-left: 20rpx;
+}
+
+.good-list .item .content .title{
+  font-size: 32rpx;
+}
+
+.good-list .item .content .desc{
+  font-size: 24rpx;
+  color:#999;
+  margin-top: 10rpx;
+}
+
+.good-list .item .content .price{
+  color:seagreen;
+  margin-top: 10rpx;
+}
