--- a/miniprogram/pages/test/test.wxss
+++ b/miniprogram/pages/test/test.wxss
@@ -1,47 +1,128 @@
-.login{
-  padding: 50rpx 20rpx;
+.clear{
+  clear: both;
+  overflow: hidden;
 }
-
-.nothing{
-  margin-top: 200rpx;
+ 
+.tabTit{
+  height:90rpx;
+  line-height: 90rpx;
+  border-bottom: solid 1px #eee;
+  position:fixed;
+  top:0;
+  width: 750rpx;
+  z-index: 1;
+  background: #fff;
+  font-size:15px;
+  text-align: center;
 }
-
-.form{
-  padding: 40rpx;
+ 
+ 
+ 
+.tabTit .active{
+  color:#e64340;
+  background: #fff;
 }
-.form .row-group{
-  padding: 20rpx 0;
-  position: relative;
-  border-bottom: 1rpx solid #ddd;
+ 
+.tabTit .active image{
+  transform: rotate(180deg);
+  background: none;
 }
-
-.form .row-group text{
-  font-size: 28rpx;
-  padding:10rpx 0;
+ 
+.tabTit image{
+  width:26rpx;
+  height:26rpx;
+  vertical-align: middle;
+  margin-left: 5px;
+ 
 }
-
-.form .row-group input{
-  padding: 10rpx 0;
+ 
+.tabLayer{
+  box-shadow: 0 5px 5px rgba(0,0,0,.15);
+  width:750rpx;
+  overflow: hidden;
+  position: fixed;
+  top:90rpx;
+  z-index: 1;
+  background: #fff;
+  padding-bottom: 40rpx;
+  border-bottom: solid 1px #eee;
+  text-align: center;
 }
-
-.form .row-group .txt{
-  color: #ccc;
+.tabLayer text{
+  width:210rpx;
+  height:60rpx;
+  line-height:60rpx;
+  float:left;
+  border: solid 1px #eee;
+  margin:20rpx 0 0 26rpx;
+  font-size:15px;
 }
-
-.form .row-group .code{
+.tabLayer .active{
+  color:#e64340;
+  border-color:#e64340;
+  }
+ 
+.flex1 {
+    flex: 1;
+    overflow: hidden;
+    display: block;
+}
+ 
+/*弹性盒模型*/
+.box {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+}
+ 
+navigator{
+  display:inline;
+}
+.list{
+  margin-top:50px;
+}
+ 
+.list .list_item{
+  margin-top:10px;
+  padding:10px;
+  height:100px;
+  border-bottom:1px solid #E8E8E8;
+}
+.list .list_item .img{
+  float:left;
+  width:40%;
+  height:100%;
+}
+.list .list_item .img image{
+   width:100%;
+   height:100%;
+}
+ 
+.list .list_item .info{
+  width:59%;
+  float:right;
+  height:100px;
+  position:relative;
+}
+.list .list_item .info .title{
+  color:#333;
+  margin-left:10px;
+  font-size: 15px;
+}
+ 
+.list .list_item .info .price{
+  color:#FF2727;
+  margin-left:10px;
+  margin-top:10px;
+  font-size:15px;
+}
+ 
+.list .list_item .info .num{
   position: absolute;
-  right: 0;
-  bottom: 26rpx;
-  z-index: 2;
-
-  width: 206rpx;
-  height: 60rpx;
-  border: 2rpx solid #00c8b6;
-  border-radius: 12rpx;
-  font-size: 26rpx;
-  font-weight: 400;
-  color: #00c8b6;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  left:0px;
+  bottom:10px;
+  color:#747474;
+  margin-left:10px;
+  font-size:15px;
 }
