--- a/miniprogram/pages/test/test.wxml
+++ b/miniprogram/pages/test/test.wxml
@@ -1,40 +1,79 @@
-<view class="tabTit box">
-  <view class="flex1{{!tab[index]?' active':''}}" wx:for="{{tabTxt}}" wx:key="type" data-index="{{index}}" bindtap="filterTab">
-    <text>{{item}}</text>
-    <image src="/img/arrow.png"></image>
+<!--pages/good-add/good-add.wxml-->
+<view class="form">
+  <view class="row-group">
+    <text>商品名字</text>
+    <input placeholder="请填写商品名字" placeholder-class='txt' maxlength='20' value="{{Goodname}}" bindinput="GoodnameInput" />
   </view>
-</view>
-<!--筛选项-->
-<view class="tabLayer" hidden="{{tab[0]}}">
-    <text class="{{pinpai_id==0?'active':''}}" data-id="0" data-index="0" data-txt="品牌" bindtap="filter">不限</text>
-    <text class="{{pinpai_id==item.id?'active':''}}" wx:for="{{pinpaiList}}" wx:key="pp" wx:for-item="item" data-id="{{item.id}}" data-index="0" data-txt="{{item.title}}" bindtap="filter">{{item.title}}</text>
-</view>
-<view class="tabLayer" hidden="{{tab[1]}}">
-    <text class="{{jiage_id==0?'active':''}}" data-id="0" data-index="1" data-txt="价格" bindtap="filter">不限</text>
-    <text class="{{jiage_id==1?'active':''}}" data-id="1" data-index="1" data-txt="58-88" bindtap="filter">58-88</text>
-    <text class="{{jiage_id==2?'active':''}}" data-id="2" data-index="1" data-txt="88-108" bindtap="filter">88-108</text>
-    <text class="{{jiage_id==3?'active':''}}" data-id="3" data-index="1" data-txt="108-188" bindtap="filter">108-188</text>
-</view>
-<view class="tabLayer" hidden="{{tab[2]}}">
-    <text class="{{xiaoliang_id==0?'active':''}}" data-id="0" data-index="2" data-txt="销量" bindtap="filter">不限</text>
-    <text class="{{xiaoliang_id==1?'active':''}}" data-id="1" data-index="2" data-txt="从高到低" bindtap="filter">从高到低</text>
-    <text class="{{xiaoliang_id==2?'active':''}}" data-id="2" data-index="2" data-txt="从低到高" bindtap="filter">从低到高</text>
-</view>
- 
-<view class='list'>
-  <block wx:for='{{dataList}}' wx:key='list' wx:for-item="item">
-  <view class="list_item">
-      <navigator url='details?id={{item.goods_id}}'>
-      <view class='img'>
-        <image src="{{imghref}}{{item.goods_img}}"  mode="scaleToFill"/>
-      </view>
-      <view class='info'>
-        <view class='title'>{{item.goods_title}}</view>
-        <view class='price'>￥{{item.goods_price}}</view>
-        <view class='num'>销量{{item.goods_xiaoliang}}</view>
-      </view>
-       </navigator>
-      <view class='clear'></view>
+
+  <view class="row-group">
+    <text>商品图片</text>
+    <input placeholder="请填写图片链接" placeholder-class='txt' maxlength='255' value="{{Goodpicture}}" bindinput="GoodpictureInput" />
   </view>
-  </block>
+
+
+  <view class="row-group">
+    <text>商品介绍</text>
+    <input placeholder="请填写商品介绍" placeholder-class='txt' maxlength='100' value="{{introduction}}" bindinput="introductionInput" />
+  </view>
+  
+  <view class="row-group">
+    <text>是否包邮(1包邮0不包邮)</text>
+    <input placeholder="1包邮0不包邮" placeholder-class='txt' maxlength='20' value="{{isPackage1}}" bindinput="isPackageInput" />
+  </view>
+
+  <view class="row-group">
+    <text>首页图片</text>
+    <input placeholder="请输入首页图片" placeholder-class='txt' maxlength='255' value="{{Frontpicture}}" bindinput="FrontpictureInput" />
+  </view>
+
+  <view class="row-group">
+    <text>分类编号</text>
+    <input placeholder="请填写分类编号" placeholder-class='txt' maxlength='20' value="{{categoryId}}" bindinput="categoryIdInput" />
+  </view>
+
+    <view class="row-group">
+    <text>sku行数</text>
+    <input placeholder="请填写行数" placeholder-class='txt' maxlength='25' value="{{index1}}" bindinput="indexInput" />
+  </view>
+
+    <view class="row-group" wx:for="{{attribute1}}" wx:for-index="idx">
+    <text>商品类型的值：（比如颜色）</text>
+    <input placeholder="请填写商品类型" placeholder-class='txt' maxlength='20' value="{{key1}}" bindinput="key1Input" data-index="{{idx}}"/>
+  </view>
+
+
+  <view class="row-group">
+  <text>以下是SKU属性，多次填写增加后上架</text>
+  </view>
+
+  <view class="row-group" wx:for="{{attribute1}}" wx:for-index="idx">
+    <text>{{ attribute1[idx].attrKey}}</text>
+    <input placeholder="请输入属性" placeholder-class='txt' maxlength='255' value="{{attribute2}}" bindinput="attributeIdInput" data-index="{{idx}}"/>
+  </view>
+
+
+  <view class="row-group">
+    <text>库存</text>
+    <input placeholder="请填写库存" placeholder-class='txt' maxlength='20' value="{{leftNumber}}" bindinput="leftNumberInput" />
+  </view>
+
+  <view class="row-group">
+    <text>商品型号图片</text>
+    <input placeholder="请填写图片链接" placeholder-class='txt' maxlength='255' value="{{picture}}" bindinput="pictureInput" />
+  </view>
+
+  <view class="row-group">
+    <text>价格</text>
+    <input placeholder="请填写商品价格" placeholder-class='txt' maxlength='20' value="{{price}}" bindinput="priceInput" />
+  </view>
+
+  <view class="row-group">
+    <text>VIP折扣</text>
+    <input placeholder="请填写VIP的价格" placeholder-class='txt' maxlength='20' value="{{vipprice}}" bindinput="vippriceInput" />
+  </view>
+
+  <view class="but">
+    <button class="add" open-type="getUserInfo" bindtap="add">增加SKU</button>
+    <button class="submit" open-type="getUserInfo" bindtap="onClickadd">上架</button>
+  </view>
 </view>
